--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "grunt-usemin": "~0.1.11",
     "grunt-svgmin": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
-    "load-grunt-tasks": "~0.1.0",
+    "load-grunt-tasks": "^0.4.0",
     "grunt-google-cdn": "~0.2.0",
     "grunt-ngmin": "~0.0.2",
     "time-grunt": "~0.1.0",
     "grunt-contrib-less": "~0.9.0",
     "grunt-express": "~1.2.1",
-    "graceful-fs": "~2.0.3"
+    "graceful-fs": "~2.0.3",
+    "grunt-rev": "^0.1.0"
   }
 }
